feat: Add search user openapi
